hard-gists/de1726bfc7330b2c9b2a/run.log
=== Docker Run Log for de1726bfc7330b2c9b2a ===
Started at: Mi 29. Okt 20:35:14 CET 2025

[2025-10-29 20:35:15] START: Running container for de1726bfc7330b2c9b2a
[2025-10-29 20:35:15] SUCCESS: Container c72eeaffede7f7913babe9cb863c7f977237c27ca6bd40006b4e5c960df05d59 started for de1726bfc7330b2c9b2a
=== Container logs for de1726bfc7330b2c9b2a ===
  File "/snippet.py", line 24
    print 'Root is at: ', x0
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for de1726bfc7330b2c9b2a ===
[2025-10-29 20:35:17] INFO: Container c72eeaffede7f7913babe9cb863c7f977237c27ca6bd40006b4e5c960df05d59 has stopped
